--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name='.MyReceiver' android:enabled="true" />
+        <receiver android:name='.AlarmReceiver' android:enabled="true" />
     </application>
 
 </manifest>
