--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewTemplateActivity"></activity>
+        <activity android:name=".MaintainTemplatesActivity"></activity>
+        <activity android:name=".TemplateActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
