--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MaintainReminderActivity"></activity>
+
+        <activity android:name=".MaintainReminderActivity" />
         <activity android:name=".MaintainTemplatesActivity" />
         <activity android:name=".TemplateActivity" />
         <activity
